updated the front-end

--- a/package.json
+++ b/package.json
@@ -47,5 +47,9 @@
   },
   "keywords": [],
   "author": "Thinkful, Inc.",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "moment": "^2.29.4",
+    "pg": "^8.11.3"
+  }
 }
